--- a/src/app/components/inventory/new-product/new-product.component.html
+++ b/src/app/components/inventory/new-product/new-product.component.html
@@ -41,20 +41,20 @@
 
           <!-- Para mostrar el código QR del articulo creado -->
           <div fxFlex class="div-qr">
+
             <mat-card-content *ngIf="articuloCreado.nombre">
               <span fxLayoutAlign="start">Código QR: </span>
-              <qrcode fxLayoutAlign="center" [qrdata]="articuloCreado.nombre" [width]="256"></qrcode>
+              <qrcode name="qrr" fxLayoutAlign="center" [qrdata]="articuloCreado.nombre" [width]="256"></qrcode>
               <span fxLayoutAlign="center">{{ articuloCreado.nombre }}</span>
               <span fxLayoutAlign="center">{{ articuloCreado.marca }}</span>
               <span fxLayoutAlign="center">{{ articuloCreado.stock }}</span>
               <span fxLayoutAlign="center">{{ articuloCreado.precio }}</span>
-
+              <button mat-raised-button color="primary" (click)="guardarQR()">Guardar QR</button>
             </mat-card-content>
+
           </div>
+
         </div>
-
-
-
 
       </mat-card>
 
