--- a/src/app/components/inventory/general-inventory/general-inventory.component.html
+++ b/src/app/components/inventory/general-inventory/general-inventory.component.html
@@ -3,27 +3,27 @@
 
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-      <td mat-cell *matCellDef="let articulo"> {{articulo.nombre}} </td>
+      <td mat-cell *matCellDef="let producto"> {{producto.nombre}} </td>
     </ng-container>
 
     <ng-container matColumnDef="marca">
       <th mat-header-cell *matHeaderCellDef> Marca </th>
-      <td mat-cell *matCellDef="let articulo"> {{articulo.marca}} </td>
+      <td mat-cell *matCellDef="let producto"> {{producto.marca}} </td>
     </ng-container>
 
     <ng-container matColumnDef="stock">
       <th mat-header-cell *matHeaderCellDef> Stock </th>
-      <td mat-cell *matCellDef="let articulo"> {{articulo.stock}} </td>
+      <td mat-cell *matCellDef="let producto"> {{producto.stock}} </td>
     </ng-container>
 
     <ng-container matColumnDef="precio">
       <th mat-header-cell *matHeaderCellDef> Precio </th>
-      <td mat-cell *matCellDef="let articulo"> {{articulo.precio}} </td>
+      <td mat-cell *matCellDef="let producto"> {{producto.precio}} </td>
     </ng-container>
 
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef> Acciones </th>
-      <td mat-cell *matCellDef="let articulo">
+      <td mat-cell *matCellDef="let producto">
         <button mat-stroked-button color="accent" >
           <mat-icon>edit</mat-icon>
         </button>
