pasando el nombre del producto y colocarlo en la URL + component product

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
       <mat-card-title>Resultado QR:</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      {{ resultadoScan }}
+      <a [routerLink]="['/products']">{{ resultadoScan }}</a>
     </mat-card-content>
 
     <button mat-raised-button color="warn" (click)="resetear()" *ngIf="resultadoScan">
