--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -7,10 +7,10 @@
       <mat-icon>business</mat-icon>Menu
     </mat-toolbar>
     <mat-nav-list >
-      <a mat-list-item [routerLink]="['inventory']">Inventario</a>
-      <a mat-list-item [routerLink]="['products']">Productos</a>
-      <a mat-list-item [routerLink]="['reports']">Reportes</a>
-      <a mat-list-item [routerLink]="['help']">Ayuda</a>
+      <a mat-list-item [routerLink]="['inventario']">Inventario</a>
+      <a mat-list-item [routerLink]="['productos']">Productos</a>
+      <a mat-list-item [routerLink]="['reportes']">Reportes</a>
+      <a mat-list-item [routerLink]="['ayuda']">Ayuda</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
