--- a/src/app/components/inventory/new-product/new-product.component.html
+++ b/src/app/components/inventory/new-product/new-product.component.html
@@ -12,22 +12,22 @@
               <form class="example-form">
                 <mat-form-field class="ex-form">
                   <mat-label>Nombre del producto:</mat-label>
-                  <input matInput name="qr-nombre" placeholder="Tanque de agua" [(ngModel)]="qrData.nombre">
+                  <input matInput name="qr-nombre" placeholder="Tanque de agua" [(ngModel)]="articuloCreado.nombre">
                 </mat-form-field>
 
                 <mat-form-field class="ex-form">
                   <mat-label>Marca:</mat-label>
-                  <input matInput name="qr-marca" placeholder="Eternit" [(ngModel)]="qrData.marca">
+                  <input matInput name="qr-marca" placeholder="Eternit" [(ngModel)]="articuloCreado.marca">
                 </mat-form-field>
 
                 <mat-form-field class="ex-form">
                   <mat-label>Stock:</mat-label>
-                  <input matInput name="qr-stock" placeholder="20" [(ngModel)]="qrData.stock">
+                  <input matInput name="qr-stock" placeholder="20" [(ngModel)]="articuloCreado.stock">
                 </mat-form-field>
 
                 <mat-form-field class="ex-form">
                   <mat-label>Precio:</mat-label>
-                  <input matInput name="qr-precio" placeholder="120" [(ngModel)]="qrData.precio">
+                  <input matInput name="qr-precio" placeholder="120" [(ngModel)]="articuloCreado.precio">
                 </mat-form-field>
 
                 <mat-card-actions fxLayoutAlign="center">
@@ -42,13 +42,13 @@
           <!-- Para mostrar el código QR del articulo creado -->
           <div fxFlex class="div-qr">
 
-            <mat-card-content *ngIf="articuloCreado.nombre">
+            <mat-card-content *ngIf="qr">
               <span fxLayoutAlign="start">Código QR: </span>
-              <qrcode name="qrr" fxLayoutAlign="center" [qrdata]="articuloCreado.nombre" [width]="256"></qrcode>
-              <span fxLayoutAlign="center">{{ articuloCreado.nombre }}</span>
-              <span fxLayoutAlign="center">{{ articuloCreado.marca }}</span>
-              <span fxLayoutAlign="center">{{ articuloCreado.stock }}</span>
-              <span fxLayoutAlign="center">{{ articuloCreado.precio }}</span>
+              <qrcode name="qrr" fxLayoutAlign="center" [qrdata]="qr" [width]="256"></qrcode>
+              <!-- <span fxLayoutAlign="center">{{ qrData.nombre }}</span>
+              <span fxLayoutAlign="center">{{ qrData.marca }}</span>
+              <span fxLayoutAlign="center">{{ qrData.stock }}</span>
+              <span fxLayoutAlign="center">{{ qrData.precio }}</span> -->
               <button mat-raised-button color="primary" (click)="guardarProducto()">Guardar QR</button>
             </mat-card-content>
 
