agregar al QR que creamos la ruta con el ID del producto

--- a/src/app/components/inventory/new-product/new-product.component.html
+++ b/src/app/components/inventory/new-product/new-product.component.html
@@ -32,7 +32,8 @@
 
                 <mat-card-actions fxLayoutAlign="center">
                   <button mat-raised-button color="primary" (click)="registrarDatos()">Registar</button>
-                  <button mat-raised-button color="warn" (click)="Limpiar()">Limpiar</button>
+                  <button mat-raised-button color="warn" (click)="limpiar()">Limpiar</button>
+                  <button mat-raised-button color="primary" (click)="generarQR()">Generar</button>
                 </mat-card-actions>
               </form>
 
