generando tabla para el kardex

--- a/src/app/components/products/product/product.component.css
+++ b/src/app/components/products/product/product.component.css
@@ -1,11 +1,11 @@
-.producto-card {
+/* .producto-card {
   min-width: 300px;
   max-width: 360px;
   margin: 5px;
-}
+} */
 
 .main-div {
-  width: 90%;
+  width: 98%;
   margin: 0 auto;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -13,4 +13,14 @@
 
 .imagen {
   max-height: 350px;
+}
+
+table {
+  width: 100%;
+}
+
+.div-container {
+  max-height: auto;
+  width: auto;
+  overflow: auto;
 }
