--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -29,7 +29,7 @@
 
               <ng-container matColumnDef="fecha">
                 <th mat-header-cell *matHeaderCellDef> FECHA </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha | date}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha}} </td>
               </ng-container>
               <ng-container matColumnDef="detalle">
                 <th mat-header-cell *matHeaderCellDef> DETALLE </th>
