--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -14,7 +14,7 @@
           <p>Stock: {{ producto.stock }}</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button (click)="iniciarKardex(producto.id)">Kardex</button>
+          <button mat-button (click)="iniciarKardex()">Kardex</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -72,6 +72,36 @@
             </table>
           </div>
 
+        </mat-card-content>
+
+        <mat-card-content>
+          <form >
+            <mat-form-field >
+              <mat-label>Detalle:</mat-label>
+              <input matInput name="qr-nombre" placeholder="Entrada/Salida" [(ngModel)]="nuevoKardex.detalle">
+            </mat-form-field>
+
+            <!-- <mat-form-field >
+              <mat-label>Valor Unit:</mat-label>
+              <input matInput name="qr-marca" [(ngModel)]="nuevoKardex.valor_unit">
+            </mat-form-field> -->
+
+            <mat-form-field >
+              <mat-label>Cantidad Salida:</mat-label>
+              <input matInput name="qr-stock" placeholder="20" [(ngModel)]="nuevoKardex.cant_s">
+            </mat-form-field>
+
+            <!-- <mat-form-field class="ex-form">
+              <mat-label>Precio:</mat-label>
+              <input matInput name="qr-precio" placeholder="120" [(ngModel)]="articuloCreado.precio">
+            </mat-form-field> -->
+
+            <mat-card-actions fxLayoutAlign="center">
+              <button mat-raised-button color="primary" (click)="registrarKardex()">Registar Kardex</button>
+              <!-- <button mat-raised-button color="warn" (click)="limpiar()">Limpiar</button>
+              <button mat-raised-button color="primary" (click)="generarQR()">Generar</button> -->
+            </mat-card-actions>
+          </form>
         </mat-card-content>
       </mat-card>
     </div>
