--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -3,18 +3,18 @@
       fxLayout="row wrap"
       class="animated fadeIn">
     <div fxFlex="20">
-      <mat-card>
+      <mat-card class="producto-card">
         <mat-card-header>
           <mat-card-title>{{ producto.nombre }}</mat-card-title>
           <mat-card-subtitle>{{ producto.marca }}</mat-card-subtitle>
         </mat-card-header>
         <img class="imagen" mat-card-image [src]="producto.qr" [alt]="producto.nombre">
         <mat-card-content>
-          <p>Precio: S/. {{ producto.precio }}</p>
+          <p>Precio: {{ producto.precio | currency:'S/.' }}</p>
           <p>Stock: {{ producto.stock }}</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button (click)="iniciarKardex()">Kardex</button>
+          <button mat-button (click)="kardex = !kardex">Kardex</button>
         </mat-card-actions>
       </mat-card>
     </div>
@@ -27,9 +27,9 @@
           <div class="div-container mat-elevation-z8">
             <table mat-table [dataSource]="dataSource">
 
-              <ng-container matColumnDef="fecha">
+              <ng-container matColumnDef="fecha" sticky>
                 <th mat-header-cell *matHeaderCellDef> FECHA </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha * 1000 | date: 'dd/MM/yyyy h:mm:ss'}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha * 1000 | date: 'dd/MM/2020 h:mm'}} </td>
               </ng-container>
               <ng-container matColumnDef="detalle">
                 <th mat-header-cell *matHeaderCellDef> DETALLE </th>
@@ -37,37 +37,37 @@
               </ng-container>
               <ng-container matColumnDef="valor_unit">
                 <th mat-header-cell *matHeaderCellDef> VALOR UNIT. </th>
-                <td mat-cell *matCellDef="let regKardex"> S/. {{regKardex.valor_unit}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.valor_unit}} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_e">
-                <th mat-header-cell *matHeaderCellDef> CANT. ENTRADA </th>
+                <th mat-header-cell *matHeaderCellDef> ENTRADA </th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.cant_e}} </td>
               </ng-container>
               <ng-container matColumnDef="total_e">
-                <th mat-header-cell *matHeaderCellDef> TOTAL </th>
+                <th mat-header-cell *matHeaderCellDef> TOTAL S/. </th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_e}} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_s">
-                <th mat-header-cell *matHeaderCellDef> CANT. SALIDA </th>
+                <th mat-header-cell *matHeaderCellDef> SALIDA </th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.cant_s}} </td>
               </ng-container>
               <ng-container matColumnDef="total_s">
-                <th mat-header-cell *matHeaderCellDef> TOTAL </th>
+                <th mat-header-cell *matHeaderCellDef> TOTAL S/.</th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_s}} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_t">
-                <th mat-header-cell *matHeaderCellDef> CANT. SALDO </th>
+                <th mat-header-cell *matHeaderCellDef> SALDO </th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.cant_t}} </td>
               </ng-container>
-              <ng-container matColumnDef="total_t">
-                <th mat-header-cell *matHeaderCellDef> TOTAL </th>
-                <td mat-cell *matCellDef="let regKardex"> S/. {{regKardex.total_t}} </td>
+              <ng-container matColumnDef="total_t" stickyEnd>
+                <th mat-header-cell *matHeaderCellDef> TOTAL S/. </th>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_t}} </td>
               </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
           </div>
@@ -75,31 +75,24 @@
         </mat-card-content>
 
         <mat-card-content>
-          <form >
+          <mat-card-actions fxLayoutAlign="center" *ngIf="!registrar">
+            <button mat-raised-button color="primary" (click)="registrar = 'entrada'">Entrada</button>
+            <button mat-raised-button color="primary" (click)="registrar = 'salida'">Salida</button>
+          </mat-card-actions>
+          <form *ngIf="registrar">
             <mat-form-field >
               <mat-label>Detalle:</mat-label>
               <input matInput name="qr-nombre" placeholder="Entrada/Salida" [(ngModel)]="nuevoKardex.detalle">
             </mat-form-field>
 
-            <!-- <mat-form-field >
-              <mat-label>Valor Unit:</mat-label>
-              <input matInput name="qr-marca" [(ngModel)]="nuevoKardex.valor_unit">
-            </mat-form-field> -->
-
             <mat-form-field >
-              <mat-label>Cantidad Salida:</mat-label>
-              <input matInput name="qr-stock" placeholder="20" [(ngModel)]="nuevoKardex.cant_s">
+              <mat-label>Cantidad:</mat-label>
+              <input matInput name="qr-stock" placeholder="20" [(ngModel)]="cantidadRegistrada">
             </mat-form-field>
 
-            <!-- <mat-form-field class="ex-form">
-              <mat-label>Precio:</mat-label>
-              <input matInput name="qr-precio" placeholder="120" [(ngModel)]="articuloCreado.precio">
-            </mat-form-field> -->
-
             <mat-card-actions fxLayoutAlign="center">
-              <button mat-raised-button color="primary" (click)="registrarKardex()">Registar Kardex</button>
-              <!-- <button mat-raised-button color="warn" (click)="limpiar()">Limpiar</button>
-              <button mat-raised-button color="primary" (click)="generarQR()">Generar</button> -->
+              <button mat-raised-button color="primary" (click)="registrarKardex()">Registar</button>
+              <button mat-raised-button color="warn" (click)="kardex = !kardex; registrar = null">Cancelar</button>
             </mat-card-actions>
           </form>
         </mat-card-content>
