generar registro de stock inicial en Kardex al momento de crear un nuevo producto

--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -87,7 +87,7 @@
 
             <mat-form-field >
               <mat-label>Cantidad:</mat-label>
-              <input matInput name="qr-stock" placeholder="20" [(ngModel)]="cantidadRegistrada">
+              <input matInput name="qr-stock" type="number" placeholder="20" [(ngModel)]="cantidadRegistrada">
             </mat-form-field>
 
             <mat-card-actions fxLayoutAlign="center">
