--- a/src/app/components/inventory/new-product/new-product.component.html
+++ b/src/app/components/inventory/new-product/new-product.component.html
@@ -22,12 +22,12 @@
 
                 <mat-form-field class="ex-form">
                   <mat-label>Stock:</mat-label>
-                  <input matInput name="qr-stock" placeholder="20" [(ngModel)]="articuloCreado.stock">
+                  <input matInput name="qr-stock" type="number" placeholder="20" [(ngModel)]="articuloCreado.stock">
                 </mat-form-field>
 
                 <mat-form-field class="ex-form">
                   <mat-label>Precio:</mat-label>
-                  <input matInput name="qr-precio" placeholder="120" [(ngModel)]="articuloCreado.precio">
+                  <input matInput name="qr-precio" type="number" placeholder="120" [(ngModel)]="articuloCreado.precio">
                 </mat-form-field>
 
                 <mat-card-actions fxLayoutAlign="center">
