guards listos, cambio de theme / Arreglar Login-logout

--- a/src/app/components/inventory/inventory.component.html
+++ b/src/app/components/inventory/inventory.component.html
@@ -1,8 +1,7 @@
 <div class="animated fadeIn">
 
-<mat-tab-group mat-stretch-tabs class="stretched-tabs mat-elevation-z4">
+<mat-tab-group backgroundColor="info" mat-stretch-tabs class="stretched-tabs mat-elevation-z4">
   <mat-tab label="Inventario General">
-
     <app-general-inventory></app-general-inventory>
     <!--<router-outlet></router-outlet>-->
   </mat-tab>
