--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -30,7 +30,8 @@
       </a>
 
       <span class="spacer"></span>
-      <a mat-button>Cerrar Sesión</a>
+      <a mat-button (click)="iniciarSesion()">Iniciar Sesión</a>
+      <a mat-button (click)="cerrarSesion()">Cerrar Sesión</a>
 
     </mat-toolbar>
 
