--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <app-login></app-login> -->
-<!-- <app-main-nav></app-main-nav> -->
-<router-outlet></router-outlet>
+<app-main-nav></app-main-nav>
+<!-- <router-outlet></router-outlet> -->
