--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -6,11 +6,11 @@
     <mat-toolbar color="primary">
       <mat-icon>business</mat-icon>Menu
     </mat-toolbar>
-    <mat-nav-list >
-      <a mat-list-item [routerLink]="['inventario']">Inventario</a>
-      <a mat-list-item [routerLink]="['productos']">Productos</a>
-      <a mat-list-item [routerLink]="['reportes']">Reportes</a>
-      <a mat-list-item [routerLink]="['ayuda']">Ayuda</a>
+    <mat-nav-list class="lista">
+      <a mat-list-item [routerLink]="['inventario']"><p color="white">Inventario</p></a>
+      <a mat-list-item [routerLink]="['productos']"><p>Productos</p></a>
+      <a mat-list-item [routerLink]="['reportes']"><p>Reportes</p></a>
+      <a mat-list-item [routerLink]="['ayuda']"><p>Ayuda</p></a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
