--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -13,23 +13,23 @@
           <p>Precio: {{ producto.precio | currency:'S/.' }}</p>
           <p>Stock: {{ producto.stock }}</p>
         </mat-card-content>
-        <mat-card-actions>
+        <!-- <mat-card-actions>
           <button mat-button (click)="kardex = !kardex">Kardex</button>
-        </mat-card-actions>
+        </mat-card-actions> -->
       </mat-card>
     </div>
 
-    <div *ngIf="kardex" fxFlex>
+    <div fxFlex>
       <mat-card>
         <mat-card-title>Kardex: {{ producto.nombre }}</mat-card-title>
         <mat-card-content>
 
           <div class="div-container mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource">
+            <table matTableExporter  mat-table [dataSource]="dataSource" #exporter="matTableExporter">
 
-              <ng-container matColumnDef="fecha" sticky>
+              <ng-container matColumnDef="fecha" >
                 <th mat-header-cell *matHeaderCellDef> FECHA </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha * 1000 | date: 'dd/MM/2020 h:mm'}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.fecha * 1000 | date: 'dd/MM/2020'}} </td>
               </ng-container>
               <ng-container matColumnDef="detalle">
                 <th mat-header-cell *matHeaderCellDef> DETALLE </th>
@@ -46,7 +46,7 @@
               </ng-container>
               <ng-container matColumnDef="total_e">
                 <th mat-header-cell *matHeaderCellDef> TOTAL S/. </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_e}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_e  | currency:'S/.' }} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_s">
@@ -55,16 +55,16 @@
               </ng-container>
               <ng-container matColumnDef="total_s">
                 <th mat-header-cell *matHeaderCellDef> TOTAL S/.</th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_s}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_s  | currency:'S/.' }} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_t">
                 <th mat-header-cell *matHeaderCellDef> SALDO </th>
                 <td mat-cell *matCellDef="let regKardex"> {{regKardex.cant_t}} </td>
               </ng-container>
-              <ng-container matColumnDef="total_t" stickyEnd>
+              <ng-container matColumnDef="total_t" >
                 <th mat-header-cell *matHeaderCellDef> TOTAL S/. </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_t}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.total_t  | currency:'S/.' }} </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -78,6 +78,8 @@
           <mat-card-actions fxLayoutAlign="center" *ngIf="!registrar">
             <button mat-raised-button color="primary" (click)="registrar = 'entrada'">Entrada</button>
             <button mat-raised-button color="primary" (click)="registrar = 'salida'">Salida</button>
+            <!-- <button mat-raised-button color="primary" (click)="exportarExcel()">Exportar Excel</button> -->
+            <button mat-raised-button color="primary" (click)="exporter.exportTable ('xlsx')">Exportar Excel</button>
           </mat-card-actions>
           <form *ngIf="registrar">
             <mat-form-field >
@@ -92,7 +94,7 @@
 
             <mat-card-actions fxLayoutAlign="center">
               <button mat-raised-button color="primary" (click)="registrarKardex()">Registar</button>
-              <button mat-raised-button color="warn" (click)="kardex = !kardex; registrar = null">Cancelar</button>
+              <button mat-raised-button color="warn" (click)="cancelar()">Cancelar</button>
             </mat-card-actions>
           </form>
         </mat-card-content>
