--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -9,12 +9,16 @@
 
 p {
   color: white;
+  text-align: center;
 }
 
 .sidenav {
   width: 150px;
   background: #2e312e;
+}
 
+.inventario {
+  font-size: 20px;
 }
 /*
 .sidenav .mat-nav-list {
@@ -25,6 +29,13 @@ p {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+.mat-icon {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  color: white;
 }
 
 .spacer {
