--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -9,8 +9,8 @@
     <mat-nav-list class="lista">
       <a mat-list-item [routerLink]="['inventario']"><mat-icon>view_agenda</mat-icon> <p>Inventario</p></a>
       <a mat-list-item [routerLink]="['productos']"><mat-icon>storefront</mat-icon> <p>Productos</p></a>
-      <a mat-list-item [routerLink]="['reportes']"><mat-icon>analytics</mat-icon> <p>Reportes</p></a>
-      <a mat-list-item [routerLink]="['ayuda']"><mat-icon>help</mat-icon> <p>Ayuda</p></a>
+      <!-- <a mat-list-item [routerLink]="['reportes']"><mat-icon>analytics</mat-icon> <p>Reportes</p></a>
+      <a mat-list-item [routerLink]="['ayuda']"><mat-icon>help</mat-icon> <p>Ayuda</p></a> -->
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
