--- a/src/app/components/editar/editar.component.css
+++ b/src/app/components/editar/editar.component.css
@@ -1,5 +1,5 @@
-.princ {
-  margin: 20px;
+mat-form-field {
+  width: 70%;
 }
 
 .formulario {
@@ -13,14 +13,7 @@
   margin-bottom: 20px;
 }
 
-.qr {
-  max-width: 500px;
-  max-height: 400px;
-}
-.div-qr {
+.div-editar {
   margin: 20px;
   margin-bottom: 5px;
 }
-/* .c-content {
-  margin-top: 20px;
-} */
