--- a/src/app/components/inventory/general-inventory/general-inventory.component.html
+++ b/src/app/components/inventory/general-inventory/general-inventory.component.html
@@ -16,12 +16,17 @@
       <td mat-cell *matCellDef="let producto"> {{producto.stock}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="precio">
+      <th mat-header-cell *matHeaderCellDef> Precio </th>
+      <td mat-cell *matCellDef="let producto"> {{producto.precio}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef> Acciones </th>
       <td mat-cell *matCellDef="let producto">
-        <button mat-stroked-button color="accent" >
+        <!-- <button mat-stroked-button color="accent" (click)="editarProducto(producto)">
           <mat-icon>edit</mat-icon>
-        </button>
+        </button> -->
         <button mat-stroked-button color="warn" (click)="eliminar(producto.id)">
           <mat-icon>delete</mat-icon>
         </button>
