Corrigiendo el registro de Entrada/Salida v1.01

--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -37,7 +37,7 @@
               </ng-container>
               <ng-container matColumnDef="valor_unit">
                 <th mat-header-cell *matHeaderCellDef> VALOR UNIT. </th>
-                <td mat-cell *matCellDef="let regKardex"> {{regKardex.valor_unit}} </td>
+                <td mat-cell *matCellDef="let regKardex"> {{regKardex.valor_unit | currency:'S/.' }} </td>
               </ng-container>
 
               <ng-container matColumnDef="cant_e">
