Correción de duplicidad de registro al crear productos seguidos - Cambio de título

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="div-princ">
 
   <mat-card>
-    <mat-card-title>Bienvenido a Inventario-QR</mat-card-title>
+    <mat-card-title>Bienvenido a Sistema Logístico-QR</mat-card-title>
     <mat-divider></mat-divider>
     <p>Comienza a escanear los productos que deseas buscar.</p>
     <mat-card-actions fxLayoutAlign="center">
