--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -26,7 +26,7 @@
 
       <!-- Chequear presentación -->
       <a mat-button [routerLink]="['home']">
-        <span class="inventario">Inventario-QR</span>
+        <span class="inventario">Sistema Logístico-QR</span>
       </a>
 
       <span class="spacer"></span>
